# SDL_fire

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: example.c
include/: SDL_fire.h
src/: SDL_fire.c  SDL_fire_priv.h
test/: test.c
